# roce-test

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  config.hpp  huge_malloc.h  logger.cpp  logger.hpp  ring_buffer.hpp  spinlock.hpp  types.h  utils.h
endpoint/: CMakeLists.txt  one_read_endpoint.cpp  query_device.cpp  rdma_endpoint.hpp  shuffle_endpoint.cpp  shuffle_endpoint.hpp
master/: CMakeLists.txt  master.cpp  rdma_master.hpp
p4/common/: header.p4
p4/l2_simple/: l2_simple.p4
p4/shuffle/: shuffle.p4  shuffle_egress.p4  shuffle_egress_parser.p4  shuffle_header.p4  shuffle_ingress.p4  shuffle_ingress_parser.p4
p4/test/: modify_ip_test.p4
python/: config.py  endpoint.py  rdma.py  simulator.py  switch.py
rdma/: CMakeLists.txt  rdma_types.h  rdma_utils.hpp
scripts/: compile.sh  compile_p4.sh  ip-config.sh  utils.sh
scripts/icrc/: disable-icrc.sh  enable-icrc.sh  query-icrc.sh
scripts/test/: connect.sh  one_read.sh  query_device.sh
switchd/: CMakeLists.txt  shuffle_drv.hpp  shuffle_master.cpp  shuffle_master.hpp  vswitchd.hpp
